--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,3 +16,9 @@ recursive-exclude frontend *
 exclude instance.yaml
 global-exclude *.pyc
 global-exclude .DS_Store
+
+recursive-include src *.gitkeep
+recursive-include src *.po
+recursive-include src *.pot
+recursive-include src *.xml
+recursive-include src *.zcml
